--- a/_posts/2023-06-07-INITIUM-对话历史-回应当代-连结彼此-5月35日-到台湾后有什么火花.html
+++ b/_posts/2023-06-07-INITIUM-对话历史-回应当代-连结彼此-5月35日-到台湾后有什么火花.html
@@ -9,43 +9,20 @@ author: 端传媒记者 黄奕潆 发自台北
 ---
 
 <p>「“我们拥有民主、自由、平等，可是，我们可不可以把它当成得来不易的东西，不要滥用它，或太理所当然把它交出去？”」</p><p>端传媒记者 黄奕潆 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/704c1e40b88e4dec989e65b09c8cfe9f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯煇/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯煇/端传媒<span class="credit"></span></figcaption></figure><p>有一段1989年发生在中国的历史，在中国不能说，有一出创作于2019年香港的舞台剧，如今已无法在香港演，《5月35日》便是这个不能说的历史，与不能演的戏剧的合体。</p>
-<p>《5月35日》借由戏剧，呈现“天安门母亲”的视角，故事主轴既不是屠城，也非六四历史，而是侧重她们受到严密监控，至今仍无法公开拜祭亲人，更无力讨回公道的悲伤。</p>
-<p>“这个故事讲述一对年迈夫妇有血有肉的伤痛，大半生承受挥之不去的郁结，记忆被禁制、压抑、消灭、隐藏，”六四舞台主席列明慧简要解释这部舞台剧的叙事方向：“直到今天，事件已经被新生代淡忘，可是，苟活半生的老一辈，他们临终的愿望，就是要到广场来一场光明正大的纪念。”</p>
-<p>天安门母亲们的愿望，至今仍无法实现，于是，香港人年年到维园，以烛光声援她们。列明慧便是其中一人。</p>
- 
+            <figcaption itemprop="caption">2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯煇/端传媒<span class="credit"></span></figcaption></figure><p>有一段1989年发生在中国的历史，在中国不能说，有一出创作于2019年香港的舞台剧，如今已无法在香港演，《5月35日》便是这个不能说的历史，与不能演的戏剧的合体。<br><br>《5月35日》借由戏剧，呈现“天安门母亲”的视角，故事主轴既不是屠城，也非六四历史，而是侧重她们受到严密监控，至今仍无法公开拜祭亲人，更无力讨回公道的悲伤。<br><br>“这个故事讲述一对年迈夫妇有血有肉的伤痛，大半生承受挥之不去的郁结，记忆被禁制、压抑、消灭、隐藏，”六四舞台主席列明慧简要解释这部舞台剧的叙事方向：“直到今天，事件已经被新生代淡忘，可是，苟活半生的老一辈，他们临终的愿望，就是要到广场来一场光明正大的纪念。”<br><br>天安门母亲们的愿望，至今仍无法实现，于是，香港人年年到维园，以烛光声援她们。列明慧便是其中一人。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/cfd1e449c3574ab1affb8f903d0debba.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港前“六四舞台”主席列明慧。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">香港前“六四舞台”主席列明慧。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption></figure>
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+<h2>讲的是历史，但反映的是香港</h2>
+<blockquote>
+<p>“那些斥责反修例运动参与者为暴徒的人，到底有没有去确认正发生的事实？有没有认清过去的历史？”</p>
+</blockquote>
+<p>曾经走过1989那一年的香港人，几乎无人不识六四，就算年纪小什么都不懂，还是会有什么留在他们身上，像是当年才12岁的列明慧，对于父母紧盯著电视，整夜不关，印象深刻，只觉出了大事；隔日上学，老师们全都穿上黑衣，而校长在台上宣布：中国发生一件令人伤心的事，边讲边哭，直劝同学们要好好读书，“要做一个中国人。”<br><br>直到中学，她才对这晚发生的事，有了真正的认识，上了大学，才懂得“纪念”。大一，她与同学一起参加维园烛光晚会，甚至留下来协助收拾，最后干脆加入支联会义工的行列。2003、2004年大学毕业，她扛起六四烛光晚会司仪的工作，一做就是10年。虽然对于六四事件纪念活动，很是投入，但仍感到烛光晚会有所限制，她们应该可以再多做些什么？这时她想起中学时参与过舞台剧制作，便在2009年，也就是六四事件20周年时，成立“六四舞台”，尝试透过戏剧推介八九民运与六四事件。<br><br>2019年，即六四事件30周年，他们制作了《5月35日》这部舞台剧。原只在5月底、6月初首演，但五场演出门票，都在公开售票一小时内售罄，于是在7月加开六场。<br><br>这是个香港局势转变的关键年，该年春天，香港人发动反修例运动，7月，行动愈趋剧烈。<br><br>“当时，香港发生了七二一事件，就是元朗地铁内白衣人攻击示威者的事。”列明慧感叹：“过去，你知道国内会有这样的事情发生，但无法想像，它也会在香港发生。”</p>
+<p>她在那一刻明白：这就是中国内部维权人士的困境，也终于理解那里的环境有多差。</p>
+<p>“2019年这一年的经历，让支持反修例运动的香港人，对六四事件有更深的体会。”列明慧意识到让这部作品继续演下去的必要性，因为剧本中很多对白，虽建立在六四语境上，也是回应当下的社会，例如，昔日中共当权者将广场上的学生和群众称为“暴徒”，宣称他们破坏社会秩序，今时参与反修例运动的市民，也被香港政府与警察认定是“暴徒”。</p>
  
  
 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
  
  
  
@@ -70,6 +47,26 @@ author: 端传媒记者 黄奕潆 发自台北
  
  
  
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
  
 
@@ -93,10 +90,7 @@ author: 端传媒记者 黄奕潆 发自台北
  
  
  
-<p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/cfd1e449c3574ab1affb8f903d0debba.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港前“六四舞台”主席列明慧。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">香港前“六四舞台”主席列明慧。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>讲的是历史，但反映的是香港</p><p>
-</p><p>“那些斥责反修例运动参与者为暴徒的人，到底有没有去确认正发生的事实？有没有认清过去的历史？”</p>
-<p></p><p>曾经走过1989那一年的香港人，几乎无人不识六四，就算年纪小什么都不懂，还是会有什么留在他们身上，像是当年才12岁的列明慧，对于父母紧盯著电视，整夜不关，印象深刻，只觉出了大事；隔日上学，老师们全都穿上黑衣，而校长在台上宣布：中国发生一件令人伤心的事，边讲边哭，直劝同学们要好好读书，“要做一个中国人。”</p><p>直到中学，她才对这晚发生的事，有了真正的认识，上了大学，才懂得“纪念”。大一，她与同学一起参加维园烛光晚会，甚至留下来协助收拾，最后干脆加入支联会义工的行列。2003、2004年大学毕业，她扛起六四烛光晚会司仪的工作，一做就是10年。虽然对于六四事件纪念活动，很是投入，但仍感到烛光晚会有所限制，她们应该可以再多做些什么？这时她想起中学时参与过舞台剧制作，便在2009年，也就是六四事件20周年时，成立“六四舞台”，尝试透过戏剧推介八九民运与六四事件。</p><p>2019年，即六四事件30周年，他们制作了《5月35日》这部舞台剧。原只在5月底、6月初首演，但五场演出门票，都在公开售票一小时内售罄，于是在7月加开六场。</p><p>这是个香港局势转变的关键年，该年春天，香港人发动反修例运动，7月，行动愈趋剧烈。</p><p>“当时，香港发生了七二一事件，就是元朗地铁内白衣人攻击示威者的事。”列明慧感叹：“过去，你知道国内会有这样的事情发生，但无法想像，它也会在香港发生。”</p><p>她在那一刻明白：这就是中国内部维权人士的困境，也终于理解那里的环境有多差。</p><p>“2019年这一年的经历，让支持反修例运动的香港人，对六四事件有更深的体会。”列明慧意识到让这部作品继续演下去的必要性，因为剧本中很多对白，虽建立在六四语境上，也是回应当下的社会，例如，昔日中共当权者将广场上的学生和群众称为“暴徒”，宣称他们破坏社会秩序，今时参与反修例运动的市民，也被香港政府与警察认定是“暴徒”。</p><p>提起“暴徒”二字，列明慧难掩激动，直道：如果天安门广场上的年轻人真的是暴徒，人们会不远千里奔赴北京支援学生吗？而那些斥责反修例运动参与者为暴徒的人，到底有没有去确认正发生的事实？有没有认清过去的历史？“这部剧虽然像是讲一段历史，但也是反映现在的香港。”</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/36fd80e97e504d2b8645a6b69cf12bea.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>提起“暴徒”二字，列明慧难掩激动，直道：如果天安门广场上的年轻人真的是暴徒，人们会不远千里奔赴北京支援学生吗？而那些斥责反修例运动参与者为暴徒的人，到底有没有去确认正发生的事实？有没有认清过去的历史？“这部剧虽然像是讲一段历史，但也是反映现在的香港。”</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/36fd80e97e504d2b8645a6b69cf12bea.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>随著2020年COVID-19疫情爆发，香港政府限制人民公开聚集活动，剧团只能偷偷借个场地，录制《5月35日》（庚子版）演出，在网路公开播放。但即使如此小心翼翼，仍然引得港警上门阻止拍摄。</p><p>台湾晓剧场艺术总监钟伯渊正好在《5月35日》（庚子版）准备期间，率团到香港演出，且有在艺术中心被限制行动的经验，后来才知道当时港警正在外头丢掷催泪弹。得以自由活动后，他与香港剧场工作者陈曙曦见面聊天，方对于眼前香港发生的一切有深刻感受。</p><p>陈曙曦正是重新演绎《5月35日》（庚子版）的导演。钟伯渊后来也在网路上看了《5月35日》（庚子版），深受感动，觉得能制作这部舞台剧的机会与经验，很珍贵。孰料，三年后，因缘际会下，《5月35日》国语版演出工作，交到钟伯渊手上。</p><p>2021年，《国安法》实施，在港府大举捕人的压力下，六四舞台解散，列明慧带著剧本版权离开香港。而这个原操持粤语的舞台剧，因此开枝散叶，有了英语版、日语版，也有了国语版。</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/2f844d3091f9437aad5ea5515bb92ce7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="晓剧场导演钟博渊。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">晓剧场导演钟博渊。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>“从个人到集体意志，成为推动巨石的人”</p><p>
 </p><p>这故事透过一个家庭去反映一个时代，也期待个人意志会成为集体意志，最后成为推动巨石的人。</p>
@@ -104,12 +98,7 @@ author: 端传媒记者 黄奕潆 发自台北
 </p><figcaption itemprop="caption">2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>对钟伯渊而言，这是一个走到和解的故事──小林在弥留之际，想像丈夫走到天安门广场，烧了衣服，表达个人意志，“而这个意志完成的风，及其所带来的能量，越来越强，强到成为时代的浪潮，得以反抗这30年的压抑的浪潮。”小林在死亡这刻，完成这件事。</p><p>“亡者不可追，但意志遗留所带出的力量，是会不断滚下去的，对未来，我们也可以有更好的想像。”钟伯渊认为小林用自己的生命换取丈夫阿大的行动，而阿大的行动，也会带动更多的行动，“这故事透过一个家庭去反映一个时代，也期待个人意志会成为集体意志，最后成为推动巨石的人。”</p><p>站在台湾历史发展的脉络下，钟伯渊的这段诠释回应了自己的生命经验与社会认知。他曾经听过祖母谈二二八，描述当时大家都不敢出去，因为外面有人又哭又喊——世居北投的他，日后为了作品做田调，发现当地许多乡野奇谈鬼故事，哀号鬼叫或竹竿夹死人等等，都隐隐涉及刑求或国家暴力，也与北投这个地方军事设施众多有关；受教育过程中，他会听到政治犯柯旗化的故事，也知道神风特攻队；升上高中时，因为国家征收土地，强迫他们离开自己的家仿佛连根拔起，而父母不知道如何争取权益等经验，都让他感受到“国家力量”的重大。</p><p>2014年太阳花运动之际，公民冲进行政院时，他剧团里的成员被镇暴警察打到耳膜都破了。即使当时钟伯渊人不在现场，但想起这件事，仍语气激动，愤怒难当。他不断问：“国家权力是什么？”</p><p>除了对台湾政治社会与国家权力关系的体感，作为剧场工作者，钟伯渊不乏两岸四地文化交流的经验，他说，2012年是晓剧场最后一次前往中国参加艺术节，原因是剧本被审批的经验，令他不适，无法接受以自我阉割换取演出的处境；约莫2020年1月，，他前往澳门演出，因为护照上的台湾贴纸，入境时被带到小房间讯问，公安以严厉口吻质疑他的护照贴，也拿遣返与关押来威吓他，逼使他将贴纸撕掉。这次入境只停留一天，他便赶著返台投票，再次入境，就受到更严格审查。</p><p>“我回台湾时，在车上忍不住哭了，我没有想到会这么恐怖，他们逼迫你不能这样想，不能这样说，这是我在台湾没有遇过的处境。”钟伯渊形容，那是一种你必须要把自己脑子切掉，无法做自己的状态。</p><p>他因此理解到，如果有一天，他因为一些原因，放弃自己的话语权，总有一天也会失去自己，若是如此，活在世界上的意义就会消失，“而我们剧场人，某个程度上，就是在追求并实践如何自己成为一个独立且自由的个体。”</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/25220aec851949ec8fe6c94bd8c770fb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2023年6月1日，台北，舞台剧《5月35日》。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>从《愿荣光归香港》到《岛屿天光》</p><p>
 </p><p>“我可以想像到香港人受到的压迫，中共对人民的镇压，从1989年6月到现在，都没有什么改变。”</p>
-<p></p><p>香港的经验，更让他警觉。同是2020年1月，晓剧场前往香港，他们在香港艺术中心，感受到外面催泪弹满布、警察街头打人的烽火时刻。“我可以想像到香港人受到的压迫，中共对人民的镇压，从1989年6月到现在，都没有什么改变。”钟伯渊说，因为中共政权，我们所不待见的东西慢慢扩散到所谓的“华人圈”，扩散到中国境外，影响我们的思维，“在这过程中，我感到最恐怖的，就是高压政权向外扩散的状态。”</p><p>如同列明慧所言，2019年在香港发生的事，令香港人对六四事件更能体会，钟伯渊也是在台湾历史经验与两岸四地往来的过程中，对于“压迫”有了深刻感触。因此，他巧妙地透过音乐，将两岸共有的“审查”与“禁制”在《5月35日》中呈现，例如选择三首戒严时期的禁歌当配乐，像是被认为过于悲伤、有失正常，使阿兵哥怀忧丧志的《望你早归》，违反善良风俗的《今天不回家》，以及《热情的沙漠》。</p><p>《热情的沙漠》遭禁，仅因为每句歌词最后配上的“啊”，让威权统治政权觉得太挑逗煽情，钟伯渊表示，对威权或极权政权来说，很多事情是没有任何依循可言的，只要他们认为不对，就是不对，那么，一般人民要如何知道自己逾矩了呢？“这其实是矫枉过正，或滥用权责。”</p><p>虽同样是对威权的抵抗，但钟伯渊在导演《5月35日》时，处理方式不若香港版本的那般控诉，而是压抑与低回。</p><p>香港演出《5月35日》（庚子版）时，正逢反修例运动，导演陈曙曦在小林断气后的设计是，她的灵魂前往广场与逝去的青年魂魄相会。咆啸呐喊是背景音，但白幕上投射的却是戴上头盔、手中握伞的香港抗争者剪影。对六四事件的追悼，以及对香港当下情势的紧迫，在此处接合，《愿荣光归香港》的歌声也响起。</p><p>但钟伯渊在《5月35日》国语版最后的设计，是让两夫妇与爱子，在客厅沙发上重聚，以全家福落定。这个画面接续的是小林的独白：“被超度的是我，我被他的爱牵引到广场，终于不需要幻想，我见到广场的孤独，三支蜡烛跟一个老人。30年，生死两茫茫，在生的人忘记，往生者不知去向，我身处的，是时代的孤寂⋯⋯。”</p><p>
-<iframe width="100%" height="312px" src="https://www.youtube.com/embed/https://youtu.be/iV8JDbtXZm4" frameborder="0" allowfullscreen> </iframe>
-</p><p>伴随著音乐响起的，是因2014年太阳花运动而生的歌曲《岛屿天光》：</p><p><small>亲爱的妈妈 请你毋通烦恼我</small>
-<small>原谅我 行袂开跤 我欲去对抗袂当原谅的人</small>
-<small>歹势啦 爱人啊 袂当陪你去看电影</small>
-<small>原谅我 行袂开跤 我欲去对抗欺负咱的人</small></p><p>“这是一首前去抗争歌曲，但又有平安归来的期待。”钟伯渊说，这首歌与剧本对应的时候，就会让众人产生正向的期待。</p><p>而这也隐隐呼应小林弥留之际的台词：“我想像阿大自由的在大街上走，在石板铺成的广场上尽情为哲哲痛哭──我多想跟他一起去，去那里流光我人生最后的眼泪⋯⋯，”这位老妇人如此独白：“这里千秋万代，无数叱咤风云的领袖在此接受膜拜，但是，没有一个为人民带来真正的幸福和平安，我们的儿子争取过，没有成功，但是他们争取过。”</p><p>香港知名剧作家庄梅岩从2017年开始编写这个天安门母亲视角的剧本，一直到定本演出时，恐怕不会料到“我们的儿子争取过，没有成功，但是他们争取过”竟成为香港人的预言。</p><p>然而，这段台词，置入台湾这30年来的学生运动与社会运动发展，与中港相比，却是相反而正面的方向。</p><p>“台湾，处在民主自由的钢索上”</p><p>
+<p></p><p>香港的经验，更让他警觉。同是2020年1月，晓剧场前往香港，他们在香港艺术中心，感受到外面催泪弹满布、警察街头打人的烽火时刻。“我可以想像到香港人受到的压迫，中共对人民的镇压，从1989年6月到现在，都没有什么改变。”钟伯渊说，因为中共政权，我们所不待见的东西慢慢扩散到所谓的“华人圈”，扩散到中国境外，影响我们的思维，“在这过程中，我感到最恐怖的，就是高压政权向外扩散的状态。”</p><p>如同列明慧所言，2019年在香港发生的事，令香港人对六四事件更能体会，钟伯渊也是在台湾历史经验与两岸四地往来的过程中，对于“压迫”有了深刻感触。因此，他巧妙地透过音乐，将两岸共有的“审查”与“禁制”在《5月35日》中呈现，例如选择三首戒严时期的禁歌当配乐，像是被认为过于悲伤、有失正常，使阿兵哥怀忧丧志的《望你早归》，违反善良风俗的《今天不回家》，以及《热情的沙漠》。</p><p>《热情的沙漠》遭禁，仅因为每句歌词最后配上的“啊”，让威权统治政权觉得太挑逗煽情，钟伯渊表示，对威权或极权政权来说，很多事情是没有任何依循可言的，只要他们认为不对，就是不对，那么，一般人民要如何知道自己逾矩了呢？“这其实是矫枉过正，或滥用权责。”</p><p>虽同样是对威权的抵抗，但钟伯渊在导演《5月35日》时，处理方式不若香港版本的那般控诉，而是压抑与低回。</p><p>香港演出《5月35日》（庚子版）时，正逢反修例运动，导演陈曙曦在小林断气后的设计是，她的灵魂前往广场与逝去的青年魂魄相会。咆啸呐喊是背景音，但白幕上投射的却是戴上头盔、手中握伞的香港抗争者剪影。对六四事件的追悼，以及对香港当下情势的紧迫，在此处接合，《愿荣光归香港》的歌声也响起。</p><p>但钟伯渊在《5月35日》国语版最后的设计，是让两夫妇与爱子，在客厅沙发上重聚，以全家福落定。这个画面接续的是小林的独白：“被超度的是我，我被他的爱牵引到广场，终于不需要幻想，我见到广场的孤独，三支蜡烛跟一个老人。30年，生死两茫茫，在生的人忘记，往生者不知去向，我身处的，是时代的孤寂⋯⋯。”</p><p>伴随著音乐响起的，是因2014年太阳花运动而生的歌曲《岛屿天光》：</p><p><small>亲爱的妈妈 请你毋通烦恼我</small></p><p><small>原谅我 行袂开跤 我欲去对抗袂当原谅的人</small></p><p><small>歹势啦 爱人啊 袂当陪你去看电影</small></p><p><small>原谅我 行袂开跤 我欲去对抗欺负咱的人</small></p><p>“这是一首前去抗争歌曲，但又有平安归来的期待。”钟伯渊说，这首歌与剧本对应的时候，就会让众人产生正向的期待。</p><p>而这也隐隐呼应小林弥留之际的台词：“我想像阿大自由的在大街上走，在石板铺成的广场上尽情为哲哲痛哭──我多想跟他一起去，去那里流光我人生最后的眼泪⋯⋯，”这位老妇人如此独白：“这里千秋万代，无数叱咤风云的领袖在此接受膜拜，但是，没有一个为人民带来真正的幸福和平安，我们的儿子争取过，没有成功，但是他们争取过。”</p><p>香港知名剧作家庄梅岩从2017年开始编写这个天安门母亲视角的剧本，一直到定本演出时，恐怕不会料到“我们的儿子争取过，没有成功，但是他们争取过”竟成为香港人的预言。</p><p>然而，这段台词，置入台湾这30年来的学生运动与社会运动发展，与中港相比，却是相反而正面的方向。</p><p>“台湾，处在民主自由的钢索上”</p><p>
 </p><p>“我们可不可以把它当成得来不易的东西，而不要滥用它，或太理所当然把它交出去，以至于有一天当我们失去它的时候，要用更大的代价换回来。”</p>
 <p></p><p>1989年六四事件后，钟伯渊从一个幼童慢慢长大，看见的是台湾政治经济剧烈的变化，像是两岸开放与民选总统；对于那年还是小学生的国际特赦组织秘书长邱伊翎而言，也有同样的感受，她看著电视新闻与报章上镇压学运的新闻，也是懵懂茫然，只觉得像是重要的事件，但生活中经验到的却是不一样的发展，“觉得世界不一样了，很像春天到了，土开始松动的感觉。”</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/6356303c6b244dc09cefed147e8d9357.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="国际特赦组织台湾分会秘书长邱伊翎。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">国际特赦组织台湾分会秘书长邱伊翎。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption><p></p><p>六四事件隔年，1990年，台湾大学生在中正纪念堂发动3月（野百合）学运。虽然生长在保守蓝营家庭，但邱伊翎年纪最小的姑姑参与了学运，也影响了她，让她不时尝试接近现场，好奇观望，也频频与姑姑讨论。她笑说，小朋友难免讨厌家父长式管教，对于反抗运动感到新鲜且特别，“原来可以在那边静坐这么久，不用上学。”</p><p>上了国中，因接触到比较有本土意识的老师，邱伊翎也逐渐被启蒙。此时，台湾社会正朝著本土化与民主化方向走，邱伊翎的目光也始终注视著自己的土地，关心的议题都是台湾劳工权益或是性别环境议题，再次接触到小时候懵懂不解的六四事件，已是2008年她进入台湾人权促进会工作后的事了。</p><p>自1989年天安门学运开始，在台湾声援北京学生的声音，一直与“血脉相连”、“民主灯塔”间回荡，论述延续著1949年开始的“反共复国”声腔，但随著两岸关系与台湾政治经济局势变化，参与六四纪念活动的民间团体，从蓝营统派，逐渐转成重视中国人权的群体与社团。邱伊翎印象中，2008年因为北京奥运将至，六四纪念活动便有流亡藏人的参与，议题也多围绕著中国人权而走，此后还有对维权律师的声援行动。</p><p>加入人权团体后，邱伊翎年年参与<a href="https://theinitium.com/article/20230606-taiwan-why-concerned-about-64/">六四纪念活动</a>，而每年六四纪念活动主题与倡议，也会依照该年中国的人权议题而定。绝大多数时候，台湾人对六四纪念比较冷漠，几乎每年六四都是“小猫两三只”，也可能遇到刮风下雨，但他们仍然觉得还是要去做。</p><p>“香港有是不是要纪念六四的立场辩论，台湾本土派社团也会觉得六四跟我们无关。”邱伊翎解释，但人权价值无关国界，不论香港反修例运动的发生，乃至<a href="https://theinitium.com/article/20230418-taiwan-lee-ming-che-anniversary/">李明哲</a>的遭遇，让台湾人渐渐感觉到中国对人权的侵害，也影响到台湾，不能再只是关注境内问题就好，“这些其实不是历史，而是现在进行式。”</p><p>但如同列明慧感觉到维园烛光晚会的限制，于是成立六四舞台，尝试以舞台剧形式推介八九民运和六四事件，邱伊翎也认为透过戏剧推广人权教育与纪念六四，是有创意的方式，毕竟，每年办六四纪念晚会似乎只停留在同温层参与，会有局限性，若要和一般民众沟通严肃的人权议题，也不是太容易，因此，国际特赦组织台湾分会去年就以放映《5月35日》映制版，作为他们的六四纪念活动。</p><p><a class="image" href="https://theinitium.com/article/20230608-taiwan-may-35th/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/de70d8c132584ff497526187403c2f56.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年6月2日，台南，六四舞台剧《5月35日》于成功大地光复校区博物馆前的南榕广场举行放映，现场约有 120名民众参与，当中皆有香港人与台湾人。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
