--- a/_posts/2023-06-07-PQ-澳洲總理艾班尼斯-美中對話是印太安全的第一道護欄.html
+++ b/_posts/2023-06-07-PQ-澳洲總理艾班尼斯-美中對話是印太安全的第一道護欄.html
@@ -67,7 +67,7 @@ author: 張東和
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="IISS Shangri-La Dialogue: Keynote Address" src="https://www.youtube.com/embed/yyf8cZKYh98?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe loading="lazy" title="IISS Shangri-La Dialogue: Keynote Address" src="https://www.youtube.com/embed/yyf8cZKYh98?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div></figure>
 
 
