--- a/_posts/2023-06-08-INITIUM-中港台记者圆桌-我们的2023康城-vs.-坎城-vs.-戛纳-丑闻与争议不缺席.html
+++ b/_posts/2023-06-08-INITIUM-中港台记者圆桌-我们的2023康城-vs.-坎城-vs.-戛纳-丑闻与争议不缺席.html
@@ -99,6 +99,6 @@ Riddle of fire （Weston Razooli）<br>
 推荐语：对女性成长和困境，描写细致，令俗不可耐的情节拍到动人处，一个轻轻的动作胜过千万言语，期待导演之后的作品。</p><p><strong>昕</strong>：<br>
 May December（Todd Haynes）<br>
 推荐语：海恩斯改写肤浅通俗剧的精湛技艺，在这部片中竟化作不稳定的 Campy 幽默，将“过气vs.当红”女演员自恋对决，升华为对影像自身终极自我绕射大秀。</p><p>青春（王兵）<br>
-推荐语：长时间凝视工人个体面孔，二段式结构以一首Beyond〈真的爱你〉为枢，转动两个精准对仗的段落：前段是青春，后段是青春失落。</p><p>A Brighter Tomorrow（Nanni Moretti）<br>
+推荐语：长时间凝视工人个体面孔，二段式结构以一首邓紫棋〈喜欢你〉为枢，转动两个精准对仗的段落：前段是青春，后段是青春失落。</p><p>A Brighter Tomorrow（Nanni Moretti）<br>
 推荐语：莫瑞提自导自演，片中他演“戏中戏”导演拍义大利共产党与极权主义分道扬镳关键时刻，戏外讲得却年将七旬对抗新自由主义，步履蹒跚，却生命力旺盛、诚恳至极。
  </p>
