--- a/_posts/2023-06-08-INMEDIA-四議員邀青年加入-公民共識會議-用-審議式民主-傾消費券.html
+++ b/_posts/2023-06-08-INMEDIA-四議員邀青年加入-公民共識會議-用-審議式民主-傾消費券.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/04%201280_44.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>左起：楊永杰、張欣宇、洪雯、梁毓偉</em></p>
-<p><font color="red">（獨媒報導）</font>四名立法會議員洪雯、張欣宇、梁毓偉及楊永杰將聯同華置主席劉鳴煒創辦的MWYO青年辦公室，計劃在8月舉行一次「共識會議」，招募18至40歲青年討論消費券等問題。在今午的茶聚，洪雯稱希望與青年探索「審議式民主」，又稱「民主真諦就係要吸收到大家講嘅嘢」，強調討論會放下既定立場。翻查網上報名表格，申請者要答三條問題，包括有多大程度能理解政府政策的目標，例如防疫政策及「搶人才」政策。</p>
+<p><font color="red">（獨媒報導）</font>四名立法會議員洪雯、張欣宇、梁毓偉及楊永杰將聯同華置主席劉鳴煒創辦的MWYO青年辦公室，計劃在8月舉行一次「共識會議」，招募18至40歲青年討論消費券等問題。在今午的茶聚，洪雯稱希望與青年探索「審議式民主」，又稱「審議式民主真諦就係要吸收到大家講嘅嘢」，強調討論會放下既定立場。翻查網上報名表格，申請者要答三條問題，包括有多大程度能理解政府政策的目標，例如防疫政策及「搶人才」政策。</p>
 <p><strong>丹麥模式左右決策 港版靠議員找渠道反映</strong></p>
 <p>共識會議（Consensus conference）是一種由丹麥發展而來的的民主參與模式，背後重要理念是社會人人平等。在丹麥模式，公民共識會議是全國矚目的大事，公民小組會發表共識報告，參與會議的專家不能影響公民小組表達的觀點；報告會交由國會議員作為決策的重要參考。雖然有同一「名字」，但4名議員提倡的「共識會議」，意見最終須「由議員透過立法會等渠道反映」。</p>
 <p>由華置主席劉鳴煒創辦的MWYO青年辦公室，稱參考審議式民主的「公民共識會議」概念，計劃在8月聯同立法會議員洪雯、張欣宇、梁毓偉及楊永杰，舉行「消費券．青年點『算』」共識會議，討論下一財政年度應否派發消費券、派發方向等。</p>
@@ -17,8 +17,8 @@ author: 獨媒報導
 <p>活動由即日起至6月30日招募18至40歲青年參加，參加者需於兩個月内閱讀由主辦方提供的資料，深入了解消費券計劃，再於8月初一連兩日的論壇與專家交流，並尋求共識。最終建議將由議員透過立法會等渠道反映。</p>
 <p><strong>網上表格問是否理解搶人才政策</strong></p>
 <p>在網上的申請表格，主辦方要求申請者要根據以往參與或接觸公共事務的經驗，由「非常同意」至「非常不同意」，揀選有多大程度同意3項陳述，包括「我能夠理解政府政策的目標，以及社會對有關政策的討論焦點（如防疫政策、「搶人才」政策）」、「政府官員或政治人物有興趣了解我的想法」、「我能夠在政府制訂政策的過程中發揮影響力」。在去年MWYO類似活動，主題是討論港鐵票價機制，申請表格並沒有類似提問。</p>
-<p><strong>洪雯：民主真諦係吸收大家講嘢</strong></p>
-<p>四位參與會議的議員今午舉行傳媒茶聚，洪雯稱希望能和年青人一起探索「審議式民主」，並承諾放下自己既定想法，聆聽青年意見，「民主嘅真諦就係要吸收到大家講嘅嘢」。她形容政府過去模式為「直昇機灑錢」，無差別向全港市民派發，提到消費券有許多其他模式，譬如指定對象而派，認為值得討論。</p>
+<p><strong>洪雯：審議式民主真諦係吸收大家講嘢</strong></p>
+<p>四位參與會議的議員今午舉行傳媒茶聚，洪雯稱希望能和年青人一起探索「審議式民主」，並承諾放下自己既定想法，聆聽青年意見，「審議式民主嘅真諦就係要吸收到大家講嘅嘢」。她形容政府過去模式為「直昇機灑錢」，無差別向全港市民派發，提到消費券有許多其他模式，譬如指定對象而派，認為值得討論。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1K70Y2C4E0" title="無標題"><img src="https://live.staticflickr.com/65535/52959204534_aefb0c621e_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>張欣宇則指，根據以往做區經驗，10個街坊可以有12個意見，令反映意見變得困難，而公民共識會議可以找到共識點，令自己更有信心向政府反映民意。</p>
 <p>楊永杰表示，很多事情不是「你啱就我錯」，希望活動能鼓勵年青人認真聆聽、深入了解資訊，求同存異；梁毓偉亦期望活動能夠鼓勵青年人參政、議政、論政。</p>
