--- a/_posts/2023-06-08-INITIUM-乔瑟芬-台湾迟来的metoo浪潮-民进党性骚事件何以成漩涡中心.html
+++ b/_posts/2023-06-08-INITIUM-乔瑟芬-台湾迟来的metoo浪潮-民进党性骚事件何以成漩涡中心.html
@@ -9,7 +9,8 @@ author: 乔瑟芬
 ---
 
 <p>「为什么长久以来，大家都“听说”过某些事，却无法让这些人付出代价？」</p><p>乔瑟芬</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230609-opinion-taiwan-dpp-metoo-moment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/69aa60ac20e74a04ad5ed8f24065f442.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒<span class="credit"></span></figcaption></figure><p>自5月31日，署名陈汘瑈的民进党前党工以一篇<a href="https://www.facebook.com/photo/?fbid=6055713864540947&set=a.282810435164681">脸书文</a>引爆此波<a href="https://theinitium.com/article/20230603-taiwan-dpp-metoo/">MeToo运动</a>以来，涉及亲绿、抗中阵营的性骚扰案，仍持续透过当事人的创伤书写在网路社群中曝光。这股风潮也召唤出来自艺文、影视、文学、社运、媒体等不同领域的创伤经验，伤者被已出面的陌生人鼓舞，有了说出口的勇气。短短一周，一篇又一篇血泪斑斑的自述，不敢求助、无法逃离、害怕对方权势地位或被进一步伤害、只好虚以委蛇的痛苦，是每个深藏多年的故事的共通点。<br><br>无独有偶，即使多数自述诉都未直接点名加害人，然而立刻有其他受害者从相似的情节和时间，辨识出彼时的自己，既而在网路上相认，也有记者主动去比对相关线索，直接在新闻报导中进行揭露。事件爆开时，该领域几乎都不感意外，表示这些事件早已是“公开的秘密”。既是这么多人知情、甚至私下提醒身边女性“要小心”的事，为什么就是无法放到台面来说？为什么长久以来，大家都“听说”过某些事，却无法让这些人付出代价？台湾在制度面其实是相对完善的，为何还会一再发生让受害者求助无门的事件？</p>
+            <figcaption itemprop="caption">2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒<span class="credit"></span></figcaption></figure><p><strong>（乔瑟芬，曾任职出版、媒体，现效力于文化创意产业，长期投入非政府组织，致力公民社会力发展。）</strong></p>
+<p>自5月31日，署名陈汘瑈的民进党前党工以一篇<a href="https://www.facebook.com/photo/?fbid=6055713864540947&set=a.282810435164681">脸书文</a>引爆此波<a href="https://theinitium.com/article/20230603-taiwan-dpp-metoo/">MeToo运动</a>以来，涉及亲绿、抗中阵营的性骚扰案，仍持续透过当事人的创伤书写在网路社群中曝光。这股风潮也召唤出来自艺文、影视、文学、社运、媒体等不同领域的创伤经验，伤者被已出面的陌生人鼓舞，有了说出口的勇气。短短一周，一篇又一篇血泪斑斑的自述，不敢求助、无法逃离、害怕对方权势地位或被进一步伤害、只好虚以委蛇的痛苦，是每个深藏多年的故事的共通点。<br><br>无独有偶，即使多数自述诉都未直接点名加害人，然而立刻有其他受害者从相似的情节和时间，辨识出彼时的自己，既而在网路上相认，也有记者主动去比对相关线索，直接在新闻报导中进行揭露。事件爆开时，该领域几乎都不感意外，表示这些事件早已是“公开的秘密”。既是这么多人知情、甚至私下提醒身边女性“要小心”的事，为什么就是无法放到台面来说？为什么长久以来，大家都“听说”过某些事，却无法让这些人付出代价？台湾在制度面其实是相对完善的，为何还会一再发生让受害者求助无门的事件？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230609-opinion-taiwan-dpp-metoo-moment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/b9725a44dbde4d84a9e2ecef2176fb97.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月1日，板桥，一名女子站在捷运站外。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年9月1日，板桥，一名女子站在捷运站外。摄：陈焯𪸩/端传媒<span class="credit"></span></figcaption></figure>
 
@@ -19,33 +20,12 @@ author: 乔瑟芬
 </blockquote>
 <p>在追问台湾亲绿阵营里的性暴力事件为何产生、又为何逐步累积为风暴前，还是有必要稍微说明跟性有关的暴力的性质。<br><br>首先，性／别暴力从来不是单纯的性欲问题，而在于权力与控制，透过剥削、宰制他人的身体与感受来强化、澎胀自我，甚至享受著受害方的屈服、不得不的迎合，满足其支配与控制的欲望。<br><br>自MeToo运动以来，包括台湾近期曝光案件，绝大部份的受害经验都佐证了此点。加害者并非真的“不懂人际距离”、“只是热情一点”，而是因为深知自身所处的权力位阶，对受害者是有恫吓力的，相信自己可以在不顾他人意愿的情况下，以言语或行为展现其宰制与掠夺的企图，有些加害人还会将之美化为“风流、勇于试探”。<br><br>性并不肮脏，有问题的也不是欲望，而是不顾他人意愿，甚至透过权力进行胁迫。<br><br>其次，性／别暴力得以一再发生，有著整个社会或该领域的圈层文化作为后盾，而非仅是个别加害者的问题。台湾除了同样受父权文化的深刻影响，也承继华人社会将性神秘化、羞耻化的传统，对受害者（特别是女性）形成更强大的规训，让受害人习于先自责，而整个社会氛围也倾向怀疑受害人“不检点”、“没保护好自己”。因此即便受害者能突破各种人情勒索和防堵的困境，诉诸法律与性平制度，往往也会因司法人员、调解人员或主管的相关意识不足，而再次受到伤害，令许多受害者踌躇。</p>
 <p>再者，受害者的样貌不只一种，也没有完美的受害者。在这些创伤故事的留言里，经常可以看到各种质疑，例如当下为什么不离开、不反抗，加害者甚至会以“他每天／事后都跟我有说有笑，怎么可能是性骚扰／性侵呢”来逃避社会检视。</p>
-<p>然而，受害者可能因为各种不同原因，包括害怕受到更严重的伤害、失去工作、学位等，或吓到来不及反应，而没有“激烈拒绝或抵抗”，导致看起来一切如常，甚至为了自保，还要继续假装与加害人友好，这都是导致相关事件里，受害者很难有足够证据和人证从司法途径获得正义的原因。而当外界假设性别或主流审美才是造成受害的主因，也导致男性、多元性别、年长的被害人更不易向外求助。</p>
- 
- 
- 
- 
-
- 
- 
- 
  
  
  
  
  
 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
  
  
  
@@ -71,7 +51,28 @@ author: 乔瑟芬
  
  
  
-<p>最后，与性相关的骚扰、霸凌、侵犯等行为，在指认和证明上，本就有相当难度，证据很难保全，也不易找到证人（不论是没有第三者在场，或第三者难以感知、畏于权势等），以刑事犯罪和国家刑罚的角度，必须极其谨慎，谨守相关原则，甚至只能错放。然而，相关行为并非只有法律责任，还有社会责任，无法透过司法追求的正义，不代表不能透过其它途径完成，特别是针对那些长期持续、有明显权力滥用的事件。再者，性平制度关注的是教育、人际关系与环境的修复，诉诸公共领域，则是突显制度为何失灵，和行为人的道德责任。</p><p>如同坚守言论自由的同时，也能透过批评、倡议等手段，去制衡并给予劣质言论足够压力，让公众做出判断，也能避免弱势群体受其伤害、被排除在公共参与之外，两者并不互斥，同样是值得悍卫的基本权利。同理，被指控者一样能在公共领域提出辩驳，他们的话语权并未受损。</p><p>性／别暴力是社会环境与个体互动下的产物，只是协助受害者是不够的，需要更多人认知哪些价值观导致错误的归因和权力的滥用，如果不去挑战喂养出这些价值的社会文化，就无法打破性／别暴力的循环。</p><p><a class="image" href="https://theinitium.com/article/20230609-opinion-taiwan-dpp-metoo-moment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/aca122be2b2841aaaecd51776f861132.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>然而，受害者可能因为各种不同原因，包括害怕受到更严重的伤害、失去工作、学位等，或吓到来不及反应，而没有“激烈拒绝或抵抗”，导致看起来一切如常，甚至为了自保，还要继续假装与加害人友好，这都是导致相关事件里，受害者很难有足够证据和人证从司法途径获得正义的原因。而当外界假设性别或主流审美才是造成受害的主因，也导致男性、多元性别、年长的被害人更不易向外求助。</p><p>最后，与性相关的骚扰、霸凌、侵犯等行为，在指认和证明上，本就有相当难度，证据很难保全，也不易找到证人（不论是没有第三者在场，或第三者难以感知、畏于权势等），以刑事犯罪和国家刑罚的角度，必须极其谨慎，谨守相关原则，甚至只能错放。然而，相关行为并非只有法律责任，还有社会责任，无法透过司法追求的正义，不代表不能透过其它途径完成，特别是针对那些长期持续、有明显权力滥用的事件。再者，性平制度关注的是教育、人际关系与环境的修复，诉诸公共领域，则是突显制度为何失灵，和行为人的道德责任。</p><p>如同坚守言论自由的同时，也能透过批评、倡议等手段，去制衡并给予劣质言论足够压力，让公众做出判断，也能避免弱势群体受其伤害、被排除在公共参与之外，两者并不互斥，同样是值得悍卫的基本权利。同理，被指控者一样能在公共领域提出辩驳，他们的话语权并未受损。</p><p>性／别暴力是社会环境与个体互动下的产物，只是协助受害者是不够的，需要更多人认知哪些价值观导致错误的归因和权力的滥用，如果不去挑战喂养出这些价值的社会文化，就无法打破性／别暴力的循环。</p><p><a class="image" href="https://theinitium.com/article/20230609-opinion-taiwan-dpp-metoo-moment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/aca122be2b2841aaaecd51776f861132.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2023年6月2日，民进党中央党部，民进党就性骚扰事件召开记者会。摄：唐佐欣/端传媒<span class="credit"></span></figcaption><p></p><p>绿营的MeToo事件为何更受到关注？</p><p>
 </p><p>一部份受害者也因《人选之人》掀起的讨论，重新点亮了心中的一点光，下定决心面对过往，并相信这是整个社会开始学习追上她们的时刻。</p>
 <p></p><p>民进党作为威权和旧秩序的挑战者，一直以来都是透过价值和理念来号召群众，支持者也习于诉求更高标准，在过去是相对于党国腐败的清廉、勤政、爱乡土，近时则是突出台湾作为民主阵营成员，相对于极权中国，有著根本性的价值差异。而民进党自党外时期就有不少成员投身妇运，民法中各种关于婚姻、财产分配等对女性不公的修法，都由这些妇运前辈主导，近年又因为同婚收获了大批相信人权、平等价值的年轻选民；这群支持者的组成，让这场政坛的MeToo运动，从自家内部先行开炮。</p><p>随著台剧《<a href="https://theinitium.com/article/20230523-culture-wave-makers-taiwan-tv-series/">人选之人——造浪者</a>》热播，剧中金句不只影响了众多绿营支持者，更仿佛一个正在自我实践的预言，人们渴望现实能往戏剧靠近一点点，也不自觉比较著剧中的公正党与现实里的民进党。特别这几年在抗中保台氛围下有太多习得的妥协，戏剧唤醒了一部份绿营支持者对“什么东西不能拿来交换”的思考，重新期待政治不只是对中国的抵抗与恐惧，能重新燃起当初的热忱。一部份受害者也因该剧掀起的讨论，重新点亮了心中的一点光，下定决心面对过往，并相信这是整个社会开始学习追上她们的时刻。</p><p>早于绿营近期第一案爆开之前，当民进党宣布以“民主大联盟”形式，与曾在法院记录中留有疑似以不知内容的私密影片威胁前女友的李正皓合作，就引来党内青年对民进党未来方向的质疑，党主席以一句“私领域的事”试图搁置争议（6月8日晚间，李正皓宣布退选），让重视性别平等价值的支持者大感失望，连不少因职场伦理、向来不对此类事件表态的绿营党公职，都打破沉默，直言此决定不妥。</p><p>而位于首都、理应“比较进步”的中央党部，如此粗暴处理性骚扰事件，又涉及对当事人施加人际压力，加上直属主管连同上级督导的三层疏忽，后续报出来的还有青年部主管疑似包庇性骚扰的党工、甚至带头进行职场霸凌的行径，更令支持者跌破眼镜，尤其涉及该事件的两人都相当年轻，而非“老绿男”，也让人怀疑民进党的人才选拔和任用标准，是不是出了问题。被指控者一连串似乎描准受害者的法律行动，更激起了支持者的愤怒。</p><p>虽然赖清德接任主席后，对各项争议（论文、排黑），一概采取矫枉不惜过正的态度，不只亲自出面宣示零容忍，更表态连自己都会去上性平课程，但仍有不少支持者持观望态度，不接受官样文章，反要求更明确的价值宣示与后续改进措施。在蔡英文总统二度表达歉意、并坚定表示应保护受害者的立场后，总统府资政颜志发于6月7日改变态度，虽仍坚称自身清白，但主动辞去资政一职并撤回对前员工的提告，此举颇具指标意义，似乎透露出民进党高层已意识此事的严重性，如同四年前748同婚专法，能不能留住女性、年轻选民的心，在此一举。</p><p><a class="image" href="https://theinitium.com/article/20230609-opinion-taiwan-dpp-metoo-moment/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/055dc559359443ec881d407ffe3629ba.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月27日，新竹，民进党2024总统大选参选人赖清德出席新竹市信赖台湾之友会成立大会。摄：陈焯𪸩/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
