--- a/_posts/2023-06-09-INMEDIA-教育局籲學生暑假每日1條國安mc-學校早會提-香港未來一定更美好.html
+++ b/_posts/2023-06-09-INMEDIA-教育局籲學生暑假每日1條國安mc-學校早會提-香港未來一定更美好.html
@@ -17,10 +17,10 @@ author: 獨媒報導
 <p><strong>籲學生暑假每日一條國安MC 問題包括習近平講話、共產黨史</strong></p>
 <p>暑假臨近，教育局指為延續學生課堂學習及鼓勵自主學習，製作「國家安全教育暑期自學教材」供教師使用。教材分別設「教師版」及「學生版」，內容包括參考資料及選擇題，並組織在9個星期的網上表單內，每份提供7條選擇題（第9周僅6條問題），即每日1條MC供學生自學；系統可自動核對作答並給予即時回饋，局方稱教師可下載並分發予學生作自學用途，並宜校本跟進學生進度。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M91776s9sf" title="05 960.2"><img src="https://live.staticflickr.com/65535/52961679939_2ec8c87bee_b.jpg" width="1024" alt="05 960.2" /></a></p>
-<p>局方列出的教材共設62條MC，首條問題就問到中共中央總書記、國家主席習近平出席香港回歸25 周年大會的講話，提到一國兩制是經「實踐反覆檢驗」，符合國家、香港、民族的根本利益。MC問題囊括範圍甚廣，與國安教育相關的包括國家安全委員會的職責；另有不少問題與共產黨史和中國歷史有關，如共產黨首次召開全國代表大會的地點、清朝因戰敗而簽訂的不平等條約内容，抗日戰爭相關歷史、「四人幫」倒台等。亦有文集問及國家的近代成就，如曾打破奧運會紀錄中國選手、航空科技、獲列為聯合國「世界遺產名錄」的歷史建築等。</p>
+<p>局方列出的教材共設62條MC，首條問題就問到中共中央總書記、國家主席習近平出席香港回歸25 周年大會的講話，提到一國兩制是經「實踐反覆檢驗」，符合國家、香港、民族的根本利益。MC問題囊括範圍甚廣，與國安教育相關的包括國家安全委員會的職責；另有不少問題與共產黨史和中國歷史有關，如共產黨首次召開全國代表大會的地點、清朝因戰敗而簽訂的不平等條約内容，抗日戰爭相關歷史、「四人幫」倒台等。亦有問題問及國家的近代成就，如曾打破奧運會紀錄中國選手、航空科技、獲列為聯合國「世界遺產名錄」的歷史建築等。</p>
 <p>關於香港的問題亦為數不少，包括終審法院於2011年因何案主動提請人大釋法、《2008年防止賄賂（修訂）條例》針對規管何人涉嫌貪污的行為等。有部分則問及香港歷史，如1976年郵政總局大樓於哪裡落成、內地居民赴港「自由行」的實施年份。</p>
 <p> <strong>月底辦中小學網上挑戰賽 </strong></p>
 <p>局方<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%95%99%E8%82%B2%E5%B1%80%E7%B7%A8%E4%B8%AD%E5%B0%8F%E5%AD%B8%E3%80%8C%E5%9C%8B%E6%95%99%E5%B9%B4%E6%9B%86%E3%80%8D-%E5%BB%BA%E8%AD%B0%E8%A8%8E%E8%AB%96%E5%85%B1%E7%94%A2%E9%BB%A8%E7%99%BC%E5%B1%95%E3%80%81%E5%B9%B4%E7%9C%8B%E4%B8%89%E5%A5%97%E6%84%9B%E5%9C%8B%E6%8A%97%E6%97%A5%E9%9B%BB%E5%BD%B1">去年8月制定「國民教育——活動規劃年曆」</a>，列出17個「重要日子」的建議學習活動。教育局表示學校應參考年曆舉辦校本師生活動，另將於本月19日至24日舉辦「國家安全網上學習平台：『拍拍樂』網上挑戰賽」。局方指學校應鼓勵全校學生，在初賽時段登入國安教育網上平台參與「每日挑戰」、「好文共賞」、「多媒體資源」及「越級挑戰」小遊戲，為學校累積分數，初賽時段內參與活動及小遊戲的次數不限。比賽分為小學及中學兩組，每組別累積分數最高的首32間學校將獲決賽參賽資格，決賽將以實時直播；每組各設冠、亞、季及殿軍，獎勵包括獎盃及獎狀，其餘參與者則獲發參與證書。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/82xG474pL0" title="無標題"><img src="https://live.staticflickr.com/65535/52880143636_a8b727a3f3_b.jpg" width="1024" alt="無標題" /></a><br /><em>資料圖片</em></p>
-<p>教育局亦製作「國安增益集」供教師參考，指教師可選取短文、選擇題及參考資料作教材，以協助教師將國安教育學習元素，與不同科目教學作「自然連繫」和「有機結合」。局方指是次新增了兩篇短文至「國家安全教育資源網頁」及「國家安全教育網上學習平台」，翻查網上資料，兩文為《「三峽引領號」海上風力發電機與國家安全》及《中國與鄰國的邊界問題》，教師版詳列内容與國安教育的關係及相關參考資料，局方亦設「建議」文本的適用學科，如《中》適用於小學常識科、中國歷史科及公民與社會發展科。</p>
+<p>教育局亦製作「國安增益集」供教師參考，指教師可選取短文、選擇題及參考資料作教材，以協助教師將國安教育學習元素，與不同科目教學作「自然連繫」和「有機結合」。局方指是次新增了兩篇短文至「國家安全教育資源網頁」及「國家安全教育網上學習平台」，翻查網上資料，兩文為《「三峽引領號」海上風力發電機與國家安全》及《中國與鄰國的邊界問題》，教師版詳列内容與國安教育的關係及相關參考資料；局方亦設文本的「建議」適用學科，如《中》適用於小學常識科、中國歷史科及公民與社會發展科。</p>
 </div></div></div>
