--- a/_posts/2023-06-09-PQ-新北市政頻出包卻大談總統政見-侯友宜遭政大學生怒嗆不適格.html
+++ b/_posts/2023-06-09-PQ-新北市政頻出包卻大談總統政見-侯友宜遭政大學生怒嗆不適格.html
@@ -15,7 +15,7 @@ author: 林奕辰
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="【直播／侯友宜搶攻年輕票！今晚現身政大　與學生對談】" src="https://www.youtube.com/embed/9f_V44IbKHI?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe loading="lazy" title="【直播／侯友宜搶攻年輕票！今晚現身政大　與學生對談】" src="https://www.youtube.com/embed/9f_V44IbKHI?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div></figure>
 
 
