--- a/_posts/2023-06-09-INMEDIA-無褲袋遭警誣告袋冰毒-男子向政府索償原敗訴-上訴得直發還重審.html
+++ b/_posts/2023-06-09-INMEDIA-無褲袋遭警誣告袋冰毒-男子向政府索償原敗訴-上訴得直發還重審.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/again_9.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>中年男子被指將冰毒藏在褲袋販毒，還柙一年多後，案件開審時爆出警方檢走的褲根本無褲袋，陪審團一致裁定男子無罪。他入稟高院，控告警方和律政司惡意檢控，並索償345萬元，不過早前被判敗訴。他提出上訴，上訴庭今頒判詞指原審連番出錯，對於為何呈堂的褲無褲袋，原審法官只顧著找尋可能解釋，男子供稱被押往警署前警員要求他沖涼換衫，法官雖然裁定他是不誠實證人，偏偏接納沖涼換衫一說；相反，警員否認曾叫他沖涼，法官裁定警員誠實作供，卻挑除警員否認的部分，自圓其說或因事隔多年記錯。上訴庭下令案件發還高院，由另一名法官重審。</p>
+<img src="https://www.inmediahk.net/files/column_images/again_9.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>中年男子被指將冰毒藏在褲袋販毒，還柙一年多後，案件開審時爆出警方檢走的褲根本無褲袋，陪審團一致裁定男子無罪。他入稟高院，控告警方和律政司惡意檢控，並索償345萬元，不過早前被判敗訴。他提出上訴，上訴庭今頒判詞指原審連番出錯，對於為何呈堂的褲無褲袋，原審法官只顧著找尋可能解釋，男子供稱被押往警署前警員要求他沖涼換衫，法官雖然裁定他是不誠實證人，偏偏接納沖涼換衫一說；相反，警員否認曾叫他沖涼，法官裁定警員誠實作供，卻剔除警員否認的部分，自圓其說或因事隔多年記錯。上訴庭下令案件發還高院，由另一名法官重審。</p>
 <p>原審法官是當時的高院暫委法官廖文健，原告林偉業在該宗民事審訊時沒有代表律師，廖官當時裁定原告沒遭惡意檢控，又批評原告作供前後矛盾，被捕時無即時投訴遭警方誣陷，不接納其供詞。廖官還下令他要支付訟費。林偉業早前提出上訴，上訴庭副庭長關淑馨、上訴庭法官袁家寧和林雲浩今頒下判詞。</p>
 <p><strong>冰毒包裝驗不出被告指紋或褲纖維</strong></p>
 <p>在原告的入稟狀否認藏毒販毒，並指在案發2014年5月15日，他穿著的褲根本沒有褲袋；事後政府化驗所報告亦證實，在搜出的冰毒包裝上，根本沒有他的指紋或任何褲的纖維。原告並列出遭警方誣告的經過，他指當日被截停搜查，警方無發現下仍押他返回住所，並威脅他須承認擁有冰毒，否則會拘捕他同住女友。</p>
