--- a/_posts/2023-06-10-PQ-民進黨首波性平調查報告出爐-承諾加速調查並加強性平教育.html
+++ b/_posts/2023-06-10-PQ-民進黨首波性平調查報告出爐-承諾加速調查並加強性平教育.html
@@ -18,7 +18,7 @@ author: 林奕辰
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1024x473.png" alt="" class="wp-image-139217" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>對於黨內頻頻爆出性騷擾爭議，民進黨 6 月 2 日下午由秘書長許立明率黨部主管職鞠躬道歉。／圖：中央社</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1024x473.png" alt="" class="wp-image-139217" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/64ec61e5-未命名設計.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>對於黨內頻頻爆出性騷擾爭議，民進黨 6 月 2 日下午由秘書長許立明率黨部主管職鞠躬道歉。／圖：中央社</figcaption></figure>
 
 
 
