Update VOCUS 2023-06-11 patch

--- a/_posts/2023-06-07-VOCUS-萊茵金-從貧民搶匪到音樂製作人.html
+++ b/_posts/2023-06-07-VOCUS-萊茵金-從貧民搶匪到音樂製作人.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">德國庫德裔饒舌歌手哈塔，整體而言很符合一般人眼中犯罪出生的饒舌歌手印象，又或是比起他擁有的音樂底子，一位作曲家之子，哈塔更享受有個黑幫饒舌歌手的稱號。</div>
 <div class="draft-block draft--p left">簡而言之，這不是一部底層人努力奮鬥獲得成功的美好故事。反而是一個投機取巧、放棄正常學業、並且走暗路想賺快錢，甚至靠著販賣自己的黑幫冒險故事，一炮而紅的非關英雄故事。</div>
 <div class="draft-block draft--p left">哈塔的經歷莫名其妙、成功的也莫名其妙、在德國也被批評的莫名其妙，但有一點不能忽略的是，這是一個「很有娛樂性」的人生故事，前提是裡面的虛構成分有多少？但假又如何，能賣錢的饒舌故事，可是值豪車、豪宅、還有不知藏於何處的黃金呢。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/WUd-Xaky_Fg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/WUd-Xaky_Fg"></iframe></div>
