--- a/_posts/2023-06-08-VOCUS-鑽無恆久遠-一克拉價值多少.html
+++ b/_posts/2023-06-08-VOCUS-鑽無恆久遠-一克拉價值多少.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">紀錄片一路從美國到達中國和印度等人工鑽石最大的購買與加工廠，敘述關於鑽石神話的背後，其實是一個分不清虛構還是真實的很久很久以前。</div>
 <div class="draft-block draft--p left">在永恆的愛情故事用盡之後，廠商還有更多的故事，例如鼓勵男士購買鑽石來顯示自我價值，還有告知女性她值得擁有一個傳承世代的鑽戒。甚至打起遠古之最、神秘的起源、意外的發現等，鑽石的行銷故事如同一本本網路輕小說。</div>
 <div class="draft-block draft--p left">我認為前面略顯緩慢，但越到後面越可以發現魅力的紀錄片，《鑽無恆久遠》並不是要與鑽石廠商對幹，裡面的人只想說出這個已經被造神到誇張，還繼續更誇張的礦物，它最真實的樣貌，並非集團所說的稀世珍寶，而是一個人工也可以輕易辦到，價格公道的礦物。鑽戒美在切工而非天然人工，比起專注於自然就是美，不如更多時候我們欣賞珠寶手飾那價值是工藝師的手藝與設計，原比又要再說一個行銷美夢來得更誠懇。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/nHIGGdxZe64"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/nHIGGdxZe64"></iframe></div>
