--- a/_posts/2023-06-11-INITIUM-早报-乌克兰确认开始反击-称夺回三个村镇.html
+++ b/_posts/2023-06-11-INITIUM-早报-乌克兰确认开始反击-称夺回三个村镇.html
@@ -28,7 +28,7 @@ author:
 <p>在他发表声明不到一天前，他刚刚看到调查报告草案。<a href="https://www.bbc.com/news/uk-politics-65863730">据分析</a>，报告中可能会有对他的处理建议。这份报告将于本周公布，并将经过下议院的投票表决。</p>
 <p>约翰逊的辞职来得很突然。在他辞职几个小时前，唐宁街刚刚公布了他去年卸任首相后，照例提名的上议员、贵族及其他奖项名单，其中包括<a href="https://www.reuters.com/world/uk/ex-uk-pm-boris-johnson-rewards-allies-resignation-honours-2023-06-09/">同样牵涉“派对门”的他的关键盟友</a>。</p>
 <p>约翰逊提名他的前首席私人秘书马丁·雷诺兹（Martin Reynolds）以公共服务授予巴斯勋章。2020年5月英国疫情封锁期间，雷诺兹曾邀请一些人来唐宁街花园，并建议“自带酒水”，过后还在网上为此吹嘘。</p>
-<p>约翰逊还提名向他的前幕僚丹·罗森菲尔德（Dan Rosenfield）颁发贵族勋章，向他的前通讯主任杰克·多伊尔（Jack Doyle）颁发大英帝国勋章。这两人也都是他在唐宁街开派对的关键助手。</p>
+<p>约翰逊还提名将他的前幕僚丹·罗森菲尔德（Dan Rosenfield）封为贵族，向他的前通讯主任杰克·多伊尔（Jack Doyle）颁发大英帝国勋章。这两人也都是他在唐宁街开派对的关键助手。</p>
 <p>工党副领袖安吉拉·雷纳（Angela Rayner）称约翰逊的这份荣誉名单是“令人作呕的侮辱”。一位不愿透露姓名的保守党议员也称，这份名单“令人深感尴尬”，表明约翰逊缺乏悔意。</p>
 <p>另外，还有几名约翰逊的<a href="https://www.bbc.com/news/uk-politics-65870635">关键盟友意外没有出现在名单中</a>，背后原因也引发猜测，相关争论正在成为保守党内裂痕的关键。</p>
 <h3>妮古拉·斯特金被捕又获释，未遭指控</h3>
