--- a/_posts/2023-06-12-PQ-中國駐韓大使情勒韓國-賭中國輸-會後悔.html
+++ b/_posts/2023-06-12-PQ-中國駐韓大使情勒韓國-賭中國輸-會後悔.html
@@ -26,7 +26,7 @@ author: 林貝利
 
 
 
-<iframe src="https://www.youtube.com/embed/Y9nHrNUImig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+<iframe loading="lazy" src="https://www.youtube.com/embed/Y9nHrNUImig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
 
 
 
