--- a/_posts/2023-06-13-PQ-隱藏的中共統戰據點-街坊中的宮廟.html
+++ b/_posts/2023-06-13-PQ-隱藏的中共統戰據點-街坊中的宮廟.html
@@ -14,7 +14,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336.jpeg" alt="" class="wp-image-97425" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣小型宮廟容易成為中共在台統戰機構，是當前地方不可忽視的危機。（中央社檔案照片） </figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336.jpeg" alt="" class="wp-image-97425" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/54d7d9c3-2000x1333_0792311771336-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣小型宮廟容易成為中共在台統戰機構，是當前地方不可忽視的危機。（中央社檔案照片） </figcaption></figure></div>
 
 
 
