--- a/_posts/2023-06-14-PQ-中國偷渡客從澎湖一路爽玩到台南-台灣基進要求海巡署公布點名紀錄.html
+++ b/_posts/2023-06-14-PQ-中國偷渡客從澎湖一路爽玩到台南-台灣基進要求海巡署公布點名紀錄.html
@@ -102,4 +102,12 @@ author: 嚴 武臣
 
 
 
-<p>林意評強調，該名上尉的荒唐行徑，凸顯台灣基進不斷倡議的《代理人法》重要性，他呼籲立院盡速通過該法，提升心防、明辨敵我，防範此類情況再次發生。</p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230614-1/">中國偷渡客從澎湖一路爽玩到台南？台灣基進要求海巡署公布點名紀錄</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>林意評強調，該名上尉的荒唐行徑，凸顯台灣基進不斷倡議的《代理人法》重要性，他呼籲立院盡速通過該法，提升心防、明辨敵我，防範此類情況再次發生。</p>
+
+
+
+<figure class="wp-block-video"><video controls src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/210407e9-10000000_6184335171678991_1750786709326597758_n.mp4"></video><figcaption>澎湖海巡官員縱放中國遊艇偷渡客進入澎湖，逗留9天。（完整影片）</figcaption></figure>
+
+
+
+<p>延伸閱讀：<a href="https://pourquoi.tw/taiwan-news-20230614-3/" target="_blank" rel="noopener">海巡署回應基進質問澎湖海巡縱放中國偷渡客：已報請地檢署偵辦</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20230614-1/">中國偷渡客從澎湖一路爽玩到台南？台灣基進要求海巡署公布點名紀錄</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
