--- a/_posts/2023-06-14-INMEDIA-國安處拘兩男女涉妨礙司法公正-女子上周曾涉串謀偽造被捕.html
+++ b/_posts/2023-06-14-INMEDIA-國安處拘兩男女涉妨礙司法公正-女子上周曾涉串謀偽造被捕.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/003_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>警方國安處今日（14日）拘捕一男一女，涉嫌「妨礙司法公正」，其中被捕的64歲女子<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E5%9C%8B%E5%AE%89%E8%99%95%E6%8B%98%E5%85%AD%E4%BA%BA%E6%B6%89%E5%81%BD%E9%80%A0%E6%96%87%E4%BB%B6%E7%B0%BD%E7%BD%B2-%E5%85%A9%E4%BA%BA%E5%8F%A6%E6%B6%89%E7%99%BC%E5%B8%83%E5%85%B7%E7%85%BD%E5%8B%95%E6%84%8F%E5%9C%96%E8%A8%8A%E6%81%AF">上星期二</a>（6日）曾與另外5名男子涉「串謀偽造」被捕，並指她另涉「作出具煽動意圖的作為」，透過社交平台發布具有煽動意圖的訊息。</p>
+<img src="https://www.inmediahk.net/files/column_images/003_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>警方國安處今日（14日）拘捕一男一女，涉嫌「妨礙司法公正」，其中被捕的64歲女子<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E5%9C%8B%E5%AE%89%E8%99%95%E6%8B%98%E5%85%AD%E4%BA%BA%E6%B6%89%E5%81%BD%E9%80%A0%E6%96%87%E4%BB%B6%E7%B0%BD%E7%BD%B2-%E5%85%A9%E4%BA%BA%E5%8F%A6%E6%B6%89%E7%99%BC%E5%B8%83%E5%85%B7%E7%85%BD%E5%8B%95%E6%84%8F%E5%9C%96%E8%A8%8A%E6%81%AF">上星期二</a>（6日）曾與另外五名男子涉「串謀偽造」被捕，並指她另涉「作出具煽動意圖的作為」，透過社交平台發布具有煽動意圖的訊息。警方之後發稿修訂應為「三男二女」，而非五名男子。</p>
 <p>國安處表示，今日分別在紅磡和長沙灣以涉嫌「妨礙司法公正」拘捕一名64歲女子及一名30歲男子。警方指，該女子早前因涉及「串謀偽造」及「作出具煽動意圖的作為」被捕，在獲得警方保釋後，涉嫌企圖透過一名30歲男子影響「串謀偽造」案中其他涉案人士，意圖妨礙司法公正。兩人現正被扣留調查。</p>
 <p>警方根據法庭手令搜查被捕人的處所，並檢獲電子通訊工具。</p>
 </div></div></div>
