Update VOCUS 2023-06-15 patch

--- a/_posts/2023-06-11-VOCUS-近看與遠觀國民黨-1.html
+++ b/_posts/2023-06-11-VOCUS-近看與遠觀國民黨-1.html
@@ -31,7 +31,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">真要筆者解釋，那就是一切都是「人」，派系跟隨著人去成立、運作、變化，而派系也會由內部的成員組成，漸漸轉換風格、目標。沒有什麼亙古不變，絕無同文同種就得要一家人的道理。</div>
 <div class="draft-block draft--p left">但這又要如何解釋，國民黨進入21世紀後，許多老人跟第二、第三代的表現，如此的難以解釋，對中國抱有無比尋常的情懷，卻又說不出個道理？</div>
 <div class="draft-block draft--p left">這是因為，國民黨的組成，不同系統來自不同文化，利益來源亦不相同，有家族與共產黨是血仇，有人則是毫無關係，而不管第一代有沒有仇恨，第二代也可能根據他在海外留學、國內讀書各式各樣經歷，對中國共產黨有不同的想法。這更不要說近20年，中國改革開放後的經濟紅利，轉變不少人的思維。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/8SiM97SO-lA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/8SiM97SO-lA"></iframe></div>
 <div class="draft-block draft--p left">當中有自發性的，也有受到中國資訊戰攻擊的受害者，很難一語道盡。就算是第一代來台的國民黨老黨員，也會因自己對於中國兩字的感情，做出各種不理性的抉擇。尤其是老黨員年紀大，自知來日無多，也不會想那麼遠，感性超過理性，做出許多害死子孫的行為。當然也有老黨員寧死不與共產黨來往，更不在乎中國兩個字的意義。</div>
 <div class="draft-block draft--p left">所以，筆者把大家弄混了？是，不先去掉既有的想法，很難去理解國民黨三個字所代表的整體意義。</div>
 <h3 class="draft-block draft--h3" name="header-3qj5s">國民黨人腦中的中國：文化性、民族性、實質性</h3>
