--- a/_posts/2023-06-14-VOCUS-毋敢講犧牲-驚會傷感情-滅火器-家和萬事興-專輯心得.html
+++ b/_posts/2023-06-14-VOCUS-毋敢講犧牲-驚會傷感情-滅火器-家和萬事興-專輯心得.html
@@ -19,6 +19,4 @@ author: 林艾德
 <div class="draft-block draft--p left">「為什麼你們都不告訴我？」我問。而他們用接下來的歌詞回應我：「毋敢講犧牲，驚會傷感情。」</div>
 <div class="draft-block draft--p left">他們不說，不代表我們可以不理解。最近看了好多故事，明明一直被傷害，卻還要擔心自己傷害別人。這大概是我最討厭台灣人的地方，偏偏又是台灣人最值得被愛、也最應該要被愛、被珍惜的所在。</div>
 <div class="draft-block draft--p left">滅火器的新專輯《家和萬事興》已經在各大串流平台上線，沈浸式搶聽會的第一人視角影片我放在下方，他們把每一首歌化作劇場影像，有點像是馬奎斯的《百年孤寂》，把幾代人生的故事在一張專輯的時間內走完，絕對是我看過最用心的專輯發表會。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/c_VT_z77Dfk"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/c_VT_z77Dfk"></iframe></div>
