--- a/_posts/2023-06-15-PQ-外交突破-捷克總統同框吳釗燮-籲各國團結支持台灣.html
+++ b/_posts/2023-06-15-PQ-外交突破-捷克總統同框吳釗燮-籲各國團結支持台灣.html
@@ -10,7 +10,7 @@ author: 林志鴻
 
 <p>捷克智庫「歐洲價值安全政策中心」 14 日舉行年度高峰會議，外交部長吳釗燮緊接捷克總統帕維爾開場致詞後發表專題演說，針對當前世界局勢，尤其是威權主義擴張對民主陣營的威脅，呼籲民主國家團結支持台灣。在主辦單位的安排下，帕維爾演講時，吳釗燮正好坐在台下，這是歐洲非邦交國領袖首次與台灣外交部長同台，出席在公開場合。</p>
 <p>The post <a href="https://pourquoi.tw/taiwan-news-20230615-1/">外交突破！捷克總統同框吳釗燮　籲各國團結支持台灣</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
-										<p>捷克智庫「歐洲價值安全政策中心」（European Values Center for Security Policy, EVC）14 日舉行年度高峰會議，外交部長吳釗燮緊接捷克總統帕維爾（Petr Pavel）開場致詞後發表專題演說，針對當前世界局勢，尤其是威權主義擴張對民主陣營的威脅，呼籲民主國家團結支持台灣。在主辦單位的安排下，帕維爾演講時，吳釗燮正好坐在台下，這是歐洲非邦交國領袖首次與台灣外交部長同台，出席在公開場合。</p>
+										<p><strong>捷克智庫「歐洲價值安全政策中心」（European Values Center for Security Policy, EVC）</strong>14 日舉行年度高峰會議，外交部長吳釗燮緊接<strong>捷克總統帕維爾（Petr Pavel）</strong>開場致詞後發表專題演說，針對當前世界局勢，尤其是威權主義擴張對民主陣營的威脅，呼籲民主國家團結支持台灣。在主辦單位的安排下，<strong>帕維爾演講時，吳釗燮正好坐在台下</strong>，這<strong>是歐洲非邦交國領袖首次與台灣外交部長</strong>，<strong>共同出席在公開場合</strong>。</p>
 
 
 
@@ -30,7 +30,7 @@ author: 林志鴻
 
 
 
-<p>帕維爾呼籲民主國家團結支持台海現狀不得以片面及脅迫的方式加以改變，並且確保台灣的民主自由獲得維護。他指出其他國家、例如中國也在關注烏克蘭、在關注我們的反應，「如果我們不想讓中國逕自改變世界秩序，我們就必須建立足夠的制衡力量。只有團結能實現這一目標，不僅在歐盟或北約內部，而是與世界上所有民主國家合作」。</p>
+<p>帕維爾呼籲民主國家團結支持台海現狀不得以片面及脅迫的方式加以改變，並且確保台灣的民主自由獲得維護。他指出其他國家、例如中國也在關注烏克蘭、在關注我們的反應，「<strong>如果我們不想讓中國逕自改變世界秩序，我們就必須建立足夠的制衡力量</strong>。只有團結能實現這一目標，不僅在歐盟或北約內部，而是<strong>與世界上所有民主國家合作</strong>」。</p>
 
 
 
@@ -42,11 +42,11 @@ author: 林志鴻
 
 
 
-<p>吳釗燮在捷克總統帕維爾（Petr Pavel）開幕致詞後，緊接著針對威權主義擴張的威脅進行演講，前後約 20 分鐘，結束後多人起立鼓掌，現場氣氛相當熱烈。</p>
+<p>吳釗燮在捷克總統帕維爾（Petr Pavel）開幕致詞後，緊接著針對<strong>威權主義擴張的威脅</strong>進行演講，前後約 20 分鐘，結束後多人起立鼓掌，現場氣氛相當熱烈。</p>
 
 
 
-<p>吳釗燮首先表示很榮幸在任內二度受邀訪問捷克，稱許捷克為秉承故總統哈維爾（Václav Havel）遺訓立國的偉大國家，感謝捷克的禮遇接待，也非常珍惜與共享自由、民主、人權價值的國際友人共聚交流的機會。</p>
+<p>吳釗燮首先表示很榮幸在<strong>任內二度受邀訪問捷克</strong>，稱許捷克為秉承故總統哈維爾（Václav Havel）遺訓立國的偉大國家，感謝捷克的禮遇接待，也非常珍惜與共享自由、民主、人權價值的國際友人共聚交流的機會。</p>
 
 
 
@@ -62,7 +62,7 @@ author: 林志鴻
 
 
 
-<p>吳釗燮強調，在亞洲地區，來自中國威權主義的灰色地帶威脅及經濟脅迫與日劇增。中國不斷透過認知作戰、假訊息及網路攻擊等複合式手段攻擊台灣的開放社會，中國軍艦及戰機也不時越過台灣海峽中線，試圖以侵擾與脅迫動搖台灣人民自我防衛的意志。</p>
+<p>吳釗燮強調，在<strong>亞洲地區</strong>，來自<strong>中國威權主義的灰色地帶威脅及經濟脅迫與日劇增</strong>。中國不斷透過認知作戰、假訊息及網路攻擊等複合式手段攻擊台灣的開放社會，中國軍艦及戰機也不時越過台灣海峽中線，試圖以侵擾與脅迫動搖台灣人民自我防衛的意志。</p>
 
 
 
@@ -74,7 +74,7 @@ author: 林志鴻
 
 
 
-<p>吳釗燮續表示，中國的擴張主義不僅止於台灣，更擴及東海及南海地區，透過海上民兵及武裝漁船等方式執行解放軍的命令，擴張權力與領土，使得區域和平的維繫更顯困難。</p>
+<p>吳釗燮續表示，<strong>中國的擴張主義</strong>不僅止於<strong>台灣</strong>，更擴及<strong>東海及南海地區</strong>，透過<strong>海上民兵</strong>及<strong>武裝漁船</strong>等方式執行解放軍的命令，擴張權力與領土，使得區域和平的維繫更顯困難。</p>
 
 
 
@@ -86,7 +86,7 @@ author: 林志鴻
 
 
 
-<p>吳釗燮說明，中俄威權主義合流態勢顯著，在軍事合作方面尤其明確；俄國國力因戰事受到削弱，而中國快速遞補權力真空，甚至變本加厲在中東、東南亞、非洲及拉丁美洲地區進行擴張，並與索羅門群島簽署安全協議、在緬甸吉大港及斯里蘭卡漢班托塔港等地建造軍事設施，透過「珍珠鏈戰略」進行權力佈局。</p>
+<p>吳釗燮說明，中俄威權主義合流態勢顯著，在軍事合作方面尤其明確；俄國國力因戰事受到削弱，而中國快速遞補權力真空，甚至變本加厲在中東、東南亞、非洲及拉丁美洲地區進行擴張，並與索羅門群島簽署安全協議、在緬甸吉大港及斯里蘭卡漢班托塔港等地建造軍事設施，透過「<strong>珍珠鏈戰略</strong>」進行權力佈局。</p>
 
 
 
@@ -94,7 +94,7 @@ author: 林志鴻
 
 
 
-<p>吳釗燮分享，樂見全球民主國家逐漸意識到潛在威脅，並攜手合作對抗威權主義擴張，如日本強化與歐盟合作、捷克等歐盟國家先後公布印太戰略，提升對印太區域情勢的瞭解與關注；近期落幕的「七大工業國家」（G7）廣島峰會宣言，重申台海和平與穩定的重要性，及部分歐洲領袖表示台海和平穩定是全球安全與繁榮不可或缺的一部分等，均一再向中國政府宣告，台海議題並非中國的內政問題，而是攸關全球利益。</p>
+<p>吳釗燮分享，樂見全球民主國家逐漸意識到潛在威脅，並攜手合作對抗威權主義擴張，如日本強化與歐盟合作、捷克等歐盟國家先後公布<strong>印太戰略</strong>，提升對印太區域情勢的瞭解與關注；近期落幕的「<strong>七大工業國家」（G7）廣島峰會宣言</strong>，重申台海和平與穩定的重要性，及部分歐洲領袖表示台海和平穩定是全球安全與繁榮不可或缺的一部分等，均一再向中國政府宣告，台海議題並非中國的內政問題，而是攸關全球利益。</p>
 
 
 
@@ -110,11 +110,11 @@ author: 林志鴻
 
 
 
-<p>吳釗燮另提及日前斯洛伐克政府籌組跨官產學研訪問團訪台，並樂見立陶宛政府持續派遣代表團來台強化交流合作，盛讚這些國家人口及領土或許不及其他國家，卻肩負對抗壓力的勇氣，是名符其實的「道德巨人」（moral giants）；也感謝歐洲議會及歐洲各國議會組團來台，展現對台支持，台灣人民不孤獨，感念在心，在堅持自由與民主的道路上，更加勇敢且堅定。</p>
+<p>吳釗燮另提及日前斯洛伐克政府籌組跨官產學研訪問團訪台，並樂見立陶宛政府持續派遣代表團來台強化交流合作，盛讚這些國家人口及領土或許不及其他國家，卻肩負對抗壓力的勇氣，是名符其實的<strong>「道德巨人」（moral giants）</strong>；也感謝歐洲議會及歐洲各國議會組團來台，展現對台支持，台灣人民不孤獨，感念在心，在堅持自由與民主的道路上，更加勇敢且堅定。</p>
 
 
 
-<p>吳釗燮最後表示，自去年 2 月 24 日俄烏戰事爆發後，威權主義大肆擴張，世界秩序已然改變，民主、自由、法治與人權價值瀕臨威脅，但台灣堅定與民主陣營捍衛共享價值的願景，堅定維護哈維爾故總統所堅持的價值信仰，深信透過東西方民主國家攜手合作，必能克服一切挑戰，民主終將贏得最後勝利。</p>
+<p>吳釗燮最後表示，自去（2022）年 2 月 24 日<strong>俄烏戰爭</strong>爆發後，威權主義大肆擴張，世界秩序已然改變，民主、自由、法治與人權價值瀕臨威脅，但台灣堅定與民主陣營捍衛共享價值的願景，堅定維護哈維爾故總統所堅持的價值信仰，深信透過東西方民主國家攜手合作，必能克服一切挑戰，民主終將贏得最後勝利。</p>
 
 
 
