--- a/_posts/2023-06-15-INMEDIA-涉為還柙人士冒簽文件-4人被控串謀製造虛假文書-六旬婦申保釋被拒.html
+++ b/_posts/2023-06-15-INMEDIA-涉為還柙人士冒簽文件-4人被控串謀製造虛假文書-六旬婦申保釋被拒.html
@@ -10,11 +10,11 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/06151451-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>警方國安處早前拘捕6人，其中有人被指協助還柙人士冒簽入稟索償的文件，並於被捕後透過另一人要求還柙人士稱是自行簽名。3男1女被控「串謀製造虛假文書」及「作出具有妨礙司法公正傾向及意圖的作為」罪，今（15日）在西九龍裁判法院提堂。裁判官施祖堯應控方要求，將案押後至8月10日再訊，以待警方進一步調查。六旬婦申請保釋被拒，另一人准繼續保釋，至於因另案還柙的兩人則沒有保釋申請。</p>
 <p>4名被告依次為：林明儀（64歲，退休人士）、顏學健（33歲，外賣員）、張家俊（33歲，無業）及何卓為（39歲，無業）。翻查報導，張家俊及何卓為另涉口岸爆炸品案，被控「對訂明標的的爆炸的禁制」罪，現正還柙中；兩人曾於今年3月6日入稟高院，就在警署被警員毆打的人身傷害申請索償。</p>
-<p>甫開庭時，代表林明儀的辯方大律師申請將案押後一小時，因需時拿取被告的犯人財物包內的警誡會面光碟，以核對控方的案情撮要，獲裁判官施祖堯批准。控方其後申請將案押後至8月10日再訊，以待警方進一步調查被告有否牽涉其他相關案件。</p>
+<p>甫開庭時，代表林明儀的辯方大律師郭憬憲申請將案押後一小時，因需時拿取被告犯人財物包內的警誡會面光碟，以核對控方的案情撮要，獲裁判官施祖堯批准。控方高級檢控官李庭偉其後申請將案押後至8月10日再訊，以待警方進一步調查被告有否牽涉其他相關案件。</p>
 <p>林申請保釋被拒，須要還柙，她保留8日保釋覆核權利。顏學健則繼續獲准保釋，條件為一萬元現金、不得離港、交出旅遊證件及每週到警署報到一次。而正因另案還柙的張家俊及何卓為沒有保釋申請。</p>
 <p>林明儀、顏學健及張家俊，被控一項「串謀製造虛假文書」罪，指3人於2023年3月1日至3月6日期間（包括首尾兩日)，在香港一起串謀製造虛假文書，即一份有虛假簽署的傳訊令狀，意圖由其本人或他人藉使用該文書而誘使另一人接受該文書為真文書，並因接受該文書為真文書而作出或不作某些作為，以致對該另一人或其他人不利。</p>
 <p>林明儀及何卓為，被控另一項「串謀製造虛假文書」罪，指他們於或約於2023年3月6日，在香港，一起串謀製造虛假文書，即一份有虛假簽署的傳訊令狀，意圖由其本人或他人藉使用該文書而誘使另一人接受該文書為真文書，並因接受該文書為真文書而作出或不作某些作為，以致對該另一人或其他人不利。</p>
-<p>林明儀另被控一項「作出具有妨礙司法公正傾向及意圖的作為」罪，指她於2023 年6月8日，在香港荔枝角收押所探訪室內，意圖妨礙司法公正，作出具有妨礙司法公正傾向及意圖的作為，即接觸一名為梅銘鋒的人士，並要求該梅銘鋒傅達訊息給何卓為和張家俊，要求他們聲稱傳訊令是他們所簽署的，從而阻撓及妨礙香港警察的調查及相關的刑事訴訟程序。</p>
+<p>林明儀另被控一項「作出具有妨礙司法公正傾向及意圖的作為」罪，指她於2023年6月8日，在香港荔枝角收押所探訪室內，意圖妨礙司法公正，作出具有妨礙司法公正傾向及意圖的作為，即接觸一名為梅銘鋒的人士，並要求該梅銘鋒傅達訊息給何卓為和張家俊，要求他們聲稱傳訊令是他們所簽署的，從而阻撓及妨礙香港警察的調查及相關的刑事訴訟程序。</p>
 <p>案件編號：WKCC2577/2023</p>
 <p>相關報導：<a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E5%9C%8B%E5%AE%89%E8%99%95%E6%8B%98%E5%85%A9%E7%94%B7%E5%A5%B3%E6%B6%89%E5%A6%A8%E7%A4%99%E5%8F%B8%E6%B3%95%E5%85%AC%E6%AD%A3-%E5%A5%B3%E5%AD%90%E4%B8%8A%E5%91%A8%E6%9B%BE%E6%B6%89%E4%B8%B2%E8%AC%80%E5%81%BD%E9%80%A0%E8%A2%AB%E6%8D%95">國安處拘兩男女涉妨礙司法公正 女子上周曾涉串謀偽造被捕</a></p>
 </div></div></div>
